# delta-db

./: .gitignore  Cargo.toml  ISSUES.md  PLAN.md  README.md  RFC_SETTLE.md  RFC_SETTLE_STREAM.md
.claude/: settings.local.json
.github/workflows/: release-npm.yml
benches/: profile_breakdown.rs  profile_polymarket.rs  throughput.rs
bindings/typescript/delta-db/: .gitigonre  README.md  package.json
bindings/typescript/delta-db/bench/: benchmark-reducers.ts
bindings/typescript/delta-db/examples/: delta-db-target.test.ts  (+3 more)
bindings/typescript/polygains-main/: .env.linux.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  biome.json  compose.env.local  compose.yml  drizzle.config.ts  ecosystem.config.cjs  package.json  playwright.config.mjs  postgresql.conf  state.json.example  tsconfig.json
bindings/typescript/settle-stream/: package.json
src/: change.rs  db.rs  db_core_tests.rs  db_external_tests.rs  db_rollback_tests.rs  db_test_helpers.rs  db_validation_tests.rs  delta.rs  error.rs  json_conv.rs  lib.rs  msgpack_conv.rs  napi.rs  types.rs  wasm.rs
src/engine/: aggregation.rs  dag.rs  mod.rs  mv.rs  mv_core_tests.rs  mv_sliding_tests.rs  raw_table.rs  reducer.rs
src/reducer_runtime/: event_rules.rs  external.rs  fn_reducer.rs  lua.rs  mod.rs
src/schema/: ast.rs  parser.rs
src/storage/: memory.rs  mod.rs  rocks.rs
tests/: e2e_integration.rs  uniswap_example.rs
tests/dex/: schema.sql  tests.rs
tests/polymarket/: schema.sql  tests.rs
tests/sliding/: schema.sql  tests.rs
tests/uniswap/: schema.sql  tests.rs
(+161 files in other folders)
