[package]
name = "delta-db"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sqlparser = { version = "0.55", features = ["visitor"] }
rmp-serde = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rocksdb = "0.22"
napi = { version = "2", features = ["napi9", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[[bench]]
name = "throughput"
harness = false
